# OpenMassSpec

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  README.md  STACK.md  STRATEGY.md
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  publish.yml  release.yml  wheels.yml
crates/openmassspec-io/: Cargo.toml
crates/openmassspec-io-cli/: Cargo.toml
crates/openmassspec-io-cli/src/: main.rs
crates/openmassspec-io-py/: Cargo.toml  README.md  pyproject.toml
crates/openmassspec-io-py/src/: lib.rs
crates/openmassspec-io/src/: error.rs  lib.rs
crates/openproteo-io/: Cargo.toml
crates/openproteo-io-cli/: Cargo.toml
crates/openproteo-io-cli/src/: mzml_reader.rs
crates/openproteo-io-py/: Cargo.toml  README.md  pyproject.toml
crates/openproteo-io-py/python/openproteo_io/: __init__.py
crates/openproteo-io-py/src/: lib.rs
crates/openproteo-io-py/tests/: test_smoke.py
crates/openproteo-io/src/: error.rs  lib.rs
docs/: book.toml  docusaurus.config.ts  package.json  wrangler.jsonc
docs/docs/: arrow-schema.md  design-architecture.md  intro.md
docs/src/: SUMMARY.md  install.md  intro.md  vendor-bruker.md  vendor-thermo.md  vendor-waters.md
python/: README.md  pyproject.toml
python/openmassspec/: __init__.py
python/openproteo/: __init__.py
python/tests/: test_metapackage.py
scripts/: release-stack.sh
